--- a/testTemplate/index.html
+++ b/testTemplate/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+    我是模版文件中的内容<br>
+    后台传过来的数据是：{{.}}
 </body>
 </html>
